[gd_scene load_steps=9 format=3 uid="uid://cet3k1vn3l8k2"]

[ext_resource type="Script" path="res://logic/GameController.gd" id="1_6mg0a"]
[ext_resource type="Script" path="res://logic/InputHandler.gd" id="4_3pdv7"]
[ext_resource type="FontFile" uid="uid://blhsc1md547wl" path="res://joystix.otf" id="4_joystix_font"]
[ext_resource type="Texture2D" uid="uid://clowikjgl4yq1" path="res://ball.png" id="5_ball_icon"]
[ext_resource type="Script" path="res://logic/BrickManager.gd" id="6_brick_manager"]

[sub_resource type="LabelSettings" id="LabelSettings_RoundDisplay"]
font = ExtResource("4_joystix_font")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_BallCount"]
font = ExtResource("4_joystix_font")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_GameOver"]
font = ExtResource("4_joystix_font")
font_size = 48
font_color = Color(1, 0, 0, 1)

[node name="Orb Protector" type="Node2D"]
script = ExtResource("1_6mg0a")

[node name="UI" type="CanvasLayer" parent="."]

[node name="RoundDisplay" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 0
text = "1"
label_settings = SubResource("LabelSettings_RoundDisplay")

[node name="BallCountContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="BallIcon" type="TextureRect" parent="UI/BallCountContainer"]
layout_mode = 2
texture = ExtResource("5_ball_icon")
expand_mode = 1
stretch_mode = 5

[node name="BallCountLabel" type="Label" parent="UI/BallCountContainer"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_BallCount")

[node name="EndTurnButton" type="Button" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 90.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_joystix_font")
theme_override_font_sizes/font_size = 28
text = "End Turn"

[node name="GameOverOverlay" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverOverlay"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="UI/GameOverOverlay/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_GameOver")
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="UI/GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_joystix_font")
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="BrickManager" type="Node2D" parent="."]
script = ExtResource("6_brick_manager")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("4_3pdv7")

[node name="AngleIndicator" type="Line2D" parent="."]
width = 4.0
default_color = Color(1, 1, 1, 0.8)

[node name="LauncherIndicator" type="Node2D" parent="."]

[node name="LauncherCircle" type="Line2D" parent="LauncherIndicator"]
closed = true
width = 6.0
default_color = Color(0, 1, 0, 0.9)
